<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LibraryApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_spash">SpashActivity</string>
    <string name="title_activity_libr_app">LibrApp</string>
    <string name="title_activity_main">Main</string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="btn_login">Login</string>
    <string name="title_activity_register_screen">RegisterScreen</string>
    <string name="action_settings">Settings</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">E-Mail</string>
    <string name="btn_register">Register</string>
    <string name="pick_date">Birthday</string>
    <string name="lbl_date">Selected Birthday</string>
    <string name="title_activity_password_retrieve">PasswordRetrieve</string>
    <string name="btn_pwdr">Retrieve Password</string>
    <string name="title_activity_user_menu">UserMenu</string>
    <string name="title_activity_book_search">BookSearch</string>
    <string name="book_search">Book Search</string>
    <string name="search_label">Books</string>
    <string name="search_hint">Search Books</string>

</resources>