<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/main">

 		<EditText
 		    android:id="@+id/username"
 		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
 		    android:layout_alignParentLeft="true"
 		    android:layout_alignParentTop="true"
 		    android:layout_marginTop="145dp"
 		    android:ems="10"
 		    android:hint="@string/username" >

 		    <requestFocus />
 		</EditText>

 		<EditText
 		    android:id="@+id/password"
 		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
 		    android:layout_alignParentLeft="true"
 		    android:layout_centerVertical="true"
 		    android:ems="10"
 		    android:hint="@string/password"
 		    android:inputType="textPassword" />

 		<Button
 		    android:id="@+id/btnLogin"
 		    android:layout_width="wrap_content"
 		    android:layout_height="wrap_content"
 		    android:layout_alignParentLeft="true"
 		    android:layout_below="@+id/password"
 		    android:text="@string/btn_login" />

</RelativeLayout>
